[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
prost = "0.11.9"

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "echo-server"
path = "src/server.rs"

[[bin]]
name = "echo-client"
path = "src/main.rs"
